Fix layout bug associated with hero transform

--- a/web/static/css/objects/_objects.hero.scss
+++ b/web/static/css/objects/_objects.hero.scss
@@ -23,7 +23,8 @@
         font-weight: 100;
         display: block;
         font-size: inuit-rem(96px);
-        transform: translateX(55px) translateY(-30px);
+        margin-left: 95px;
+        margin-top: -30px;
       }
     }
   }
